--- a/index.html
+++ b/index.html
@@ -30,11 +30,57 @@
           thereafter</a
         >
         <form action="">
-          <input type="text" name="" id="" placeholder="First Name" />
-          <input type="text" name="" id="" placeholder="Last Name" />
-          <input type="text" name="" id="" placeholder="Email Address" />
-          <input type="text" name="" id="" placeholder="Password" />
-          <input type="submit" value="Claim your free trial" />
+          <div class="input-container">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="First Name"
+              class="first-name-input"
+            />
+            <ion-icon name="alert-circle" class="first-alert"></ion-icon>
+            <em><p class="error first-error">First Name cannot be empty</p></em>
+          </div>
+          <div class="input-container">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Last Name"
+              class="last-name-input"
+            />
+            <ion-icon name="alert-circle" class="last-alert"></ion-icon>
+            <em><p class="error last-error">Last Name cannot be empty</p></em>
+          </div>
+          <div class="input-container">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Email Address"
+              class="email-input"
+            />
+            <ion-icon name="alert-circle" class="email-alert"></ion-icon>
+            <em
+              ><p class="error email-error">
+                Looks like this is not an email
+              </p></em
+            >
+          </div>
+          <div class="input-container">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Password"
+              class="password-input"
+            />
+            <ion-icon name="alert-circle" class="password-alert"></ion-icon>
+            <em
+              ><p class="error password-error">Password cannot be empty</p></em
+            >
+          </div>
+          <input class="submit" type="submit" value="Claim your free trial" />
           <p class="terms">
             By clicking the button, you are agreeing to our
             <span class="terms-span">Terms and Services</span>
@@ -42,5 +88,14 @@
         </form>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="app.js"></script>
   </body>
 </html>
